--- a/src/App.css
+++ b/src/App.css
@@ -54,15 +54,19 @@ textarea {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #e9e9e9; 
+  background: #e9e9e9;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #313131; 
+  background: #313131;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #222222; 
+  background: #222222;
+}
+
+.charts li {
+  float: none !important;
 }
