--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,7 @@ body {
     transform: rotate(359deg);
   }
 }
+
 @keyframes spin {
   0% {
     -webkit-transform: rotate(0deg);
@@ -53,4 +54,8 @@ body {
 .spin {
   -webkit-animation: spin 2s infinite linear;
   animation: spin 2s infinite linear;
+}
+
+td {
+  white-space: nowrap;
 }
